# reminders

./: .gitignore  README.md  package-lock.json
backend/: .coverage  .coverage.NLap.3053.XOZZAlGx  package-lock.json  package.json  pyproject.toml
backend/conf/: settings.py  urls.py
backend/reminders/: models.py  serializers.py  tests.py  urls.py  views.py
backend/reminders/migrations/: 0001_initial.py  0002_reminder_time.py  0003_alter_reminder_time.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/data/: reminders.js
frontend/src/hooks/: useReminders.js
frontend/src/pages/: ReminderCreate.jsx  ReminderEdit.jsx  ReminderList.jsx
